--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -2,7 +2,7 @@
 @media (max-width: 767px) {
 
     body{
-        padding: 0;
+        padding: 30px 0 0 0;
     }
 
     .sidebar-wrapper {
